--- a/myinfosit/app/plugins/happytime/html/pass_activities.html
+++ b/myinfosit/app/plugins/happytime/html/pass_activities.html
@@ -41,9 +41,9 @@
             {{#each mixItem in passActivity.WeixinRuleContentReplyMixItems}}
             {{#if mixItem.WeixinRuleContentReplyMixItem_first}}
                 <div class="framwork_first">
-				<div class="article article_first" {{backgroup-image url=mixItem.WeixinRuleContentReplyMixItem_pic_url}} s>
+				<div class="article article_first" {{backgroup-image url=mixItem.WeixinRuleContentReplyMixItem_pic_url}} >
 				    <div class="title_first">
-					<div class="title_text">{{mixItem.WeixinRuleContentReplyMixItem_title}}</div>
+					<div class="title_text">{{text-content content=mixItem.WeixinRuleContentReplyMixItem_title}}</div>
 				    </div>
 				</div>
 			</div>
