--- a/myinfosit/app/plugins/happytime/html/pass_activities.html
+++ b/myinfosit/app/plugins/happytime/html/pass_activities.html
@@ -52,7 +52,7 @@
                
 				<div class="article article_item">
 <div class="framwork_item">
-                <div class="item_title"><div class="item_title_text">{{mixItem.WeixinRuleContentReplyMixItem_title}}</div></div><div class="item_pic"  {{backgroup-image url=mixItem.WeixinRuleContentReplyMixItem_pic_url}}></div></div>
+                <div class="item_title"><div class="item_title_text">{{text-content content=mixItem.WeixinRuleContentReplyMixItem_title}}</div></div><div class="item_pic"  {{backgroup-image url=mixItem.WeixinRuleContentReplyMixItem_pic_url}}></div></div>
                </div>
             {{/unless}}
 				{{/each}}
