部分修改动态增加内容

--- a/myinfosit/app/plugins/happytime/html/activities.html
+++ b/myinfosit/app/plugins/happytime/html/activities.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset='utf-8'>
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta id="viewport" name="viewport" content="width=device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;" />
 <title>好时光工作室</title>
 
 <link href="../../happytime/css/demo.css?v=256" rel="stylesheet">
@@ -23,7 +24,9 @@
 
 
 <body>
-	<div class="bg"></div>
+	<div class="bg">
+	
+	</div>
     
 </body>
 <script type="text/x-handlebars" data-template-name="pass_activities">
@@ -69,6 +72,7 @@
 			</div>
 			
 			<div class="bg_bottom"></div>
+<div id="morecontent"></div>
 		{{view MDEmber.HookView}}
   </script>
   
