--- a/myinfosit/app/plugins/mahua/html/activities.html
+++ b/myinfosit/app/plugins/mahua/html/activities.html
@@ -125,11 +125,14 @@
                 <span id="plus" class="count_picker enable">+</span>
             </p>
             <hr>
-            <p>
-                <span>请输入手机号码</span><span>
-                     <input id="phone_no" class="number_container"  {{bindAttr value=model.time}}></input>
+            <h4>手机信息(请输入手机号码)</h4>
+            <p style="overflow:hidden;margin-top:4px;">
+                <!--span style="overflow:hidden;float:left;height:34px">请输入手机号码</span-->
+                <span style="overflow:hidden;float:left">
+                     <input id="phone_no" class="phone_container"  {{bindAttr value=model.time}}></input>
                 </span>
             </p>
+            <hr>
             <h4>确认发货信息</h4>
             <p>
                 支付成功后，系统将发送验证码到您的手机，演出当天凭验证码到剧场自提。
@@ -158,13 +161,13 @@
           <div class="modal-body">
             <div class="alert alert-warning">订单号:{{model.order_info.order_id}}</div>
             <h4>订单信息</h4>
-            <p class="confirm_info">
-                <span class="confirm_name">{{model.order_info.single_price}}</span>
-                <span> 演出地点：</span><span>上戏剧院（华山路630号）</span>
-                <span> 总价：</span><span>{{model.order_info.total}}元 (参与本次活动票价)</span>
+            <div class="confirm_info">
+                <span> 单价：</span><span class="confirm_name">{{model.order_info.single_price}}</span>
+                <span> 演出地点：</span><span class="confirm_name">上戏剧院（华山路630号）</span>
+                <span> 总价：</span><span class="confirm_name">{{model.order_info.total}}元 (参与本次活动票价)</span>
                 <span> 张数：</span><span class="confirm_name">{{model.order_info.count}}</span>
-                 <span> 验证码接收手机：</span><span class="confirm_name">{{model.order_info.phone_no}}</span>
-            </p>  
+                <span> 验证码接收手机：</span><span class="confirm_name">{{model.order_info.phone_no}}</span>
+            </div>  
 <!--input type='hidden' name='_input_charset' value='utf-8'/>
 <input type='hidden' name='notify_url'  {{bindAttr value=model.para.notify_url}}/>
 <input type='hidden' name='out_trade_no' {{bindAttr value=model.para.out_trade_no}}/>
