--- a/myinfosit/app/plugins/mahua/html/activities.html
+++ b/myinfosit/app/plugins/mahua/html/activities.html
@@ -142,7 +142,7 @@
           
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-cancel" data-dismiss="modal">取消</button>
             <button type="button" class="btn btn-primary" style="background-color:#ea4872;border-color:#ea4872;">确定购买</button>
           </div>
         </div>
@@ -195,7 +195,7 @@
 
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-default" data-dismiss="modal">取消</button>
+            <button type="button" class="btn btn-cancel" data-dismiss="modal">取消</button>
             <button type="submit" class="btn btn-primary" style="background-color:#ea4872;border-color:#ea4872;">订单付款</button>
           </div>
 </form>
