--- a/myinfosit/app/plugins/mahua/html/activities.html
+++ b/myinfosit/app/plugins/mahua/html/activities.html
@@ -10,9 +10,9 @@
 <link href="../../mahua/css/bootstrap.min.css" rel="stylesheet">
 <link href="../../mahua/css/mahua.css" rel="stylesheet">
 
-<script src="../../js/jquery-1.9.1.js" type="text/javascript"></script>
+<script src="../../js/jquery-1.9.1.min.js" type="text/javascript"></script>
 
-<script type="text/javascript" src="../../js/handlebars-1.0.0-rc3.js"
+<script type="text/javascript" src="../../js/handlebars-1.0.0-rc3.min.js"
 	defer="defer"></script>
 <script type="text/javascript" src="../../js/ember-1.0.0-rc.3.js"
 	defer="defer"></script>
@@ -150,7 +150,7 @@
     </div>
   </script>
   <script type="text/x-handlebars" data-template-name="confirm_order">
-<div class="" id="myModal" style="border:1px solid #000" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<div class="" id="myModal"  tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
        <div class="modal-dialog">
         <div class="modal-content">
 <form id='alipaysubmit' name='alipaysubmit' action='http://wappaygw.alipay.com/service/rest.htm?
