--- a/myinfosit/app/plugins/mahua/html/activities.html
+++ b/myinfosit/app/plugins/mahua/html/activities.html
@@ -14,7 +14,7 @@
 
 <script type="text/javascript" src="../../js/handlebars-1.0.0-rc3.min.js"
 	defer="defer"></script>
-<script type="text/javascript" src="../../js/ember-1.0.0-rc.3.js"
+<script type="text/javascript" src="../../js/ember-1.0.0-rc.3.min.js"
 	defer="defer"></script>
 <script type="text/javascript" src="../../mahua/js/ht.js" defer="defer"></script>
 
